[package]
name = "oss_storage_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
hyper = { version = "1.3.1", features = ["full"] }
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.203", features = ["derive"] }
tracing-subscriber = "0.3.18"