[workspace]
members = ["crates/*"]

resolver = "2"

[workspace.package]
version = "18.4.0-beta.3"
authors = ["Ellie Huxtable <ellie@atuin.sh>"]
rust-version = "1.80"
license = "MIT"
homepage = "https://atuin.sh"
repository = "https://github.com/atuinsh/atuin"
readme = "README.md"

[workspace.dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18"}
anyhow = "1.0.90"