[package]
name = "cmd"
edition = "2021"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
common = { path = "../common" }
server = { path = "../server" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { version = "4.5.20", features = ["derive"] }
