[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

uuid = {version = "1.10.0", features = ["v4","fast-rng","macro-diagnostics"]}

