[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]

common = { path = "../common" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

axum = "0.7.6"



